Refactor: A Brand new SORI SDK v4 template
- Deleted RecognitionService.kt and SoriListener.kt as part of the service refactor.
- Removed associated notification and audio recognition logic.
- Cleaned up unused imports and dependencies related to audio recognition.

Cleanup: Remove unused theme and color resources

- Deleted Color.kt, Theme.kt, Type.kt, and associated drawable resources.
- Removed unnecessary color definitions and theme styles.

Add: Implement new UI layout and navigation structure

- Created activity_main.xml, content_main.xml, and fragment_first.xml for new UI.
- Added campaign_item.xml for displaying campaign details.
- Established navigation graph in nav_graph.xml for fragment navigation.

Update: Modify application theme and string resources

- Updated themes.xml and strings.xml for better clarity and organization.
- Introduced new string resources for app title and help messages.

Chore: Update Gradle and repository configurations

- Upgraded Gradle plugin versions in build.gradle.
- Adjusted settings.gradle for improved dependency management.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">SORI Example</string>
+    <string name="app_name">SORIExample</string>
+    <string name="app_title">SORI Example</string>
+    <string name="help_message">
+        To start audio recognition, press the mic button below.
+    </string>
+    <string name="clear_state">Clear state</string>
 </resources>
